<resources>
    <string name="app_name">Women Protection System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_register">Register</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="belum_punya_akun">Belum punya akun ?</string>
    <string name="daftar">Daftar</string>
    <string name="login">Login</string>
    <string name="info_login">Silahkan Masuk ke WPS</string>
    <string name="wellcome">Selamat Datang Kembali</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sudah_punya_akun">Sudah punya akun ?</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="step1image">Step1Image</string>
    <string name="step2image">Step2Image</string>
    <string name="step3image">Step3Image</string>
    <string name="skip">Skip</string>
    <string name="section_format">Page %1$d</string>
    <string name="logout">Logout</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="simpan">Simpan</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="repassword">RePassword</string>
    <string name="news_information"><![CDATA[News & Information]]></string>
    <string name="eduzone">Eduzone</string>
    <string name="report">Report</string>
    <string name="news_images_desc">News Images</string>
    <string name="woman_s">Woman\'s</string>
    <string name="kids">Kids</string>
    <string name="humanization">Humanization</string>
    <string name="status_question">Apa yang anda pikirkan ?</string>
</resources>
